# knowledge-base-generator

./: .gitignore  DOCS.md  EXAMPLES.md  QUICKSTART.md  README.md  SETUP.md  TEST-RESULTS.md  USAGE.md  activate-kb-gen.sh  pyproject.toml
docs/: IMPLEMENTATION-SUMMARY.md  PLAN-dotnet-kb-generator.md
kb_generator/: __init__.py  cli.py  config.py  pipeline.py
kb_generator/analyzers/: __init__.py  dependency_graph.py  flow_analyzer.py  impact_analyzer.py  pattern_detector.py
kb_generator/generators/: __init__.py  flow_generator.py  impact_generator.py  summary_generator.py
kb_generator/parsers/: __init__.py  csharp_parser.py  csproj_parser.py  models.py  solution_parser.py
kb_generator/state/: __init__.py  models.py  tracker.py
kb_generator/utils/: file_utils.py  markdown_utils.py
